--- a/private/user/profile/index.html
+++ b/private/user/profile/index.html
@@ -9,9 +9,9 @@
   <meta content='' name='description' />
   <meta content='Paul Dijou' name='author' />
   <meta content='width=device-width' name='viewport' />
-  <link href='/less/style-1.0.0.less' rel='stylesheet/less' />
-  <script src='/js/libs/less-1.3.0.min.js' type='text/javascript'></script>
-  <script src='/js/libs/modernizr-2.6.1.js' type='text/javascript'></script>
+  <link href='//jege.github.com/jege-angular/less/style-1.0.0.less' rel='stylesheet/less' />
+  <script src='//jege.github.com/jege-angular/js/libs/less-1.3.0.min.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/modernizr-2.6.1.js' type='text/javascript'></script>
 </head>
 <body data-ng-controller='MainCtrl'>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -119,29 +119,29 @@
   <script type='text/javascript'>
     window.jQuery || document.write('<script src="/js/libs/jquery-1.8.1.js"><\/script>')
   </script>
-  <script src='/js/libs/bootstrap/bootstrap-affix.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-alert.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-button.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-carousel.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-collapse.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-dropdown.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-modal.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-popover.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-scrollspy.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-tab.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-tooltip.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-transition.js' type='text/javascript'></script>
-  <script src='/js/libs/bootstrap/bootstrap-typeahead.js' type='text/javascript'></script>
-  <script src='/js/libs/angular/angular-1.0.1.js' type='text/javascript'></script>
-  <script src='/js/libs/angular/angular-resource-1.0.1.js' type='text/javascript'></script>
-  <script src='/js/libs/angular/angular-cookies-1.0.1.js' type='text/javascript'></script>
-  <script src='/js/app.js' type='text/javascript'></script>
-  <script src='/js/services.js' type='text/javascript'></script>
-  <script src='/js/controllers.js' type='text/javascript'></script>
-  <script src='/js/filters.js' type='text/javascript'></script>
-  <script src='/js/directives.js' type='text/javascript'></script>
-  <script src='/js/plugins.js' type='text/javascript'></script>
-  <script src='/js/script.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-affix.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-alert.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-button.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-carousel.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-collapse.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-dropdown.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-modal.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-popover.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-scrollspy.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-tab.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-tooltip.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-transition.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/bootstrap/bootstrap-typeahead.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/angular/angular-1.0.1.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/angular/angular-resource-1.0.1.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/libs/angular/angular-cookies-1.0.1.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/app.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/services.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/controllers.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/filters.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/directives.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/plugins.js' type='text/javascript'></script>
+  <script src='//jege.github.com/jege-angular/js/script.js' type='text/javascript'></script>
   <script>
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
