--- a/public/user/inscription/index.html
+++ b/public/user/inscription/index.html
@@ -24,16 +24,16 @@
             <span class='icon-bar'></span>
             <span class='icon-bar'></span>
           </a>
-          <a class='brand' href='/'>JEGE AngularJS</a>
+          <a class='brand' href='//jege.github.com/jege-angular'>JEGE AngularJS</a>
           <div class='nav-collapse'>
             <ul class='nav'>
               <li>
-                <a href='/'>Home</a>
+                <a href='//jege.github.com/jege-angular'>Home</a>
               </li>
             </ul>
             <ul class='nav pull-right'>
               <li class='logged-out'>
-                <a href='/public/user/inscription'>Inscription</a>
+                <a href='//jege.github.com/jege-angular/public/user/inscription'>Inscription</a>
               </li>
               <li class='logged-out'>
                 <a data-target='#signinModal' data-toggle='modal' href='#'>Sign in</a>
@@ -45,10 +45,10 @@
                 </a>
                 <ul class='dropdown-menu'>
                   <li>
-                    <a href='/private/user/profile'>Profile</a>
+                    <a href='//jege.github.com/jege-angular/private/user/profile'>Profile</a>
                   </li>
                   <li data-ng-controller='SigninCtrl'>
-                    <a data-ng-click='signout()' href='/'>Sign out</a>
+                    <a data-ng-click='signout()' href='//jege.github.com/jege-angular'>Sign out</a>
                   </li>
                 </ul>
               </li>
